[gd_scene load_steps=17 format=3 uid="uid://dwgfxln4fp4lj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_0uonw"]
[ext_resource type="PackedScene" uid="uid://cagnofcp3jxwf" path="res://scenes/world.tscn" id="2_bggds"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="2_lw0i7"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="4_tusok"]
[ext_resource type="Script" path="res://scripts/item_interface.gd" id="5_ctmbw"]
[ext_resource type="Script" path="res://scripts/hud_interface.gd" id="5_hsg2g"]
[ext_resource type="PackedScene" uid="uid://ci4vy40gl6vs8" path="res://scenes/item_hotbar.tscn" id="5_rqfga"]
[ext_resource type="PackedScene" uid="uid://dv6li4wxrohgf" path="res://scenes/item_inventory.tscn" id="7_tb51c"]
[ext_resource type="Script" path="res://scripts/menu_interface.gd" id="8_2s1la"]
[ext_resource type="PackedScene" uid="uid://ddxw2b6u1pxow" path="res://scenes/item_slot.tscn" id="8_ipgvm"]
[ext_resource type="Script" path="res://scripts/debug_interface.gd" id="9_t26ar"]
[ext_resource type="Script" path="res://scripts/menu_loadgame.gd" id="10_b8jdc"]
[ext_resource type="Script" path="res://scripts/menu_main.gd" id="10_uh371"]
[ext_resource type="Script" path="res://scripts/menu_newgame.gd" id="11_pvy0o"]
[ext_resource type="Script" path="res://scripts/menu_options.gd" id="12_d8max"]
[ext_resource type="Script" path="res://scenes/menu_pause.gd" id="15_l2its"]

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_0uonw")

[node name="Settings" type="Node" parent="."]
process_mode = 3
script = ExtResource("2_lw0i7")

[node name="World" parent="." instance=ExtResource("2_bggds")]
process_mode = 1
visible = false

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("4_tusok")

[node name="HudInterface" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_hsg2g")

[node name="ItemHotbar" parent="UI/HudInterface" instance=ExtResource("5_rqfga")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 694.0
offset_bottom = 82.0

[node name="InteractLabel" type="Label" parent="UI/HudInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = 40.0
offset_right = 30.5
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
text = "Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemInterface" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ctmbw")

[node name="PlayerInventory" parent="UI/ItemInterface" instance=ExtResource("7_tb51c")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="EquipmentInventory" parent="UI/ItemInterface" instance=ExtResource("7_tb51c")]
layout_mode = 0
offset_left = 720.0
offset_top = 10.0
offset_right = 760.0
offset_bottom = 50.0

[node name="ExternalInventory" parent="UI/ItemInterface" instance=ExtResource("7_tb51c")]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 360.0
offset_right = 50.0
offset_bottom = 400.0

[node name="GrabbedSlot" parent="UI/ItemInterface" instance=ExtResource("8_ipgvm")]
visible = false
modulate = Color(1, 1, 1, 0.501961)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="MenuInterface" type="PanelContainer" parent="UI"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_2s1la")
metadata/_edit_use_anchors_ = true

[node name="MenuMain" type="PanelContainer" parent="UI/MenuInterface"]
layout_mode = 2
script = ExtResource("10_uh371")

[node name="MarginContainer" type="MarginContainer" parent="UI/MenuInterface/MenuMain"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuInterface/MenuMain/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonLoadgame" type="Button" parent="UI/MenuInterface/MenuMain/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
text = "Load Game"

[node name="ButtonNewgame" type="Button" parent="UI/MenuInterface/MenuMain/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
text = "New Game"

[node name="ButtonOptions" type="Button" parent="UI/MenuInterface/MenuMain/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
text = "Options"

[node name="ButtonQuit" type="Button" parent="UI/MenuInterface/MenuMain/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
text = "Quit"

[node name="MenuLoadgame" type="PanelContainer" parent="UI/MenuInterface"]
visible = false
layout_mode = 2
script = ExtResource("10_b8jdc")

[node name="MarginContainer" type="MarginContainer" parent="UI/MenuInterface/MenuLoadgame"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuInterface/MenuLoadgame/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonBack" type="Button" parent="UI/MenuInterface/MenuLoadgame/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
text = "Back"

[node name="MenuNewgame" type="PanelContainer" parent="UI/MenuInterface"]
visible = false
layout_mode = 2
script = ExtResource("11_pvy0o")

[node name="MarginContainer" type="MarginContainer" parent="UI/MenuInterface/MenuNewgame"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuInterface/MenuNewgame/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonPlay" type="Button" parent="UI/MenuInterface/MenuNewgame/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
text = "Play"

[node name="ButtonBack" type="Button" parent="UI/MenuInterface/MenuNewgame/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
text = "Back"

[node name="MenuOptions" type="PanelContainer" parent="UI/MenuInterface"]
visible = false
layout_mode = 2
script = ExtResource("12_d8max")

[node name="MarginContainer" type="MarginContainer" parent="UI/MenuInterface/MenuOptions"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuInterface/MenuOptions/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonBack" type="Button" parent="UI/MenuInterface/MenuOptions/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
text = "Back"

[node name="MenuPause" type="PanelContainer" parent="UI/MenuInterface"]
visible = false
layout_mode = 2
script = ExtResource("15_l2its")

[node name="MarginContainer" type="MarginContainer" parent="UI/MenuInterface/MenuPause"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuInterface/MenuPause/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonResume" type="Button" parent="UI/MenuInterface/MenuPause/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
text = "Resume"

[node name="ButtonQuit" type="Button" parent="UI/MenuInterface/MenuPause/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
text = "Quit"

[node name="DebugInterface" type="PanelContainer" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_t26ar")

[node name="MarginContainer" type="MarginContainer" parent="UI/DebugInterface"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DebugInterface/MarginContainer"]
layout_mode = 2

[connection signal="drop_stack" from="UI/ItemInterface" to="UI/ItemInterface" method="_on_drop_stack"]
[connection signal="gui_input" from="UI/ItemInterface" to="UI/ItemInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="UI/ItemInterface" to="UI/ItemInterface" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="UI/MenuInterface" to="UI/MenuInterface" method="_on_visibility_changed"]
[connection signal="pressed" from="UI/MenuInterface/MenuMain/MarginContainer/VBoxContainer/ButtonLoadgame" to="UI/MenuInterface/MenuMain" method="_on_button_loadgame_pressed"]
[connection signal="pressed" from="UI/MenuInterface/MenuMain/MarginContainer/VBoxContainer/ButtonNewgame" to="UI/MenuInterface/MenuMain" method="_on_button_newgame_pressed"]
[connection signal="pressed" from="UI/MenuInterface/MenuMain/MarginContainer/VBoxContainer/ButtonOptions" to="UI/MenuInterface/MenuMain" method="_on_button_options_pressed"]
[connection signal="pressed" from="UI/MenuInterface/MenuMain/MarginContainer/VBoxContainer/ButtonQuit" to="UI/MenuInterface/MenuMain" method="_on_button_quit_pressed"]
[connection signal="pressed" from="UI/MenuInterface/MenuLoadgame/MarginContainer/VBoxContainer/ButtonBack" to="UI/MenuInterface/MenuLoadgame" method="_on_button_back_pressed"]
[connection signal="pressed" from="UI/MenuInterface/MenuNewgame/MarginContainer/VBoxContainer/ButtonPlay" to="UI/MenuInterface/MenuNewgame" method="_on_button_play_pressed"]
[connection signal="pressed" from="UI/MenuInterface/MenuNewgame/MarginContainer/VBoxContainer/ButtonBack" to="UI/MenuInterface/MenuNewgame" method="_on_button_back_pressed"]
[connection signal="pressed" from="UI/MenuInterface/MenuOptions/MarginContainer/VBoxContainer/ButtonBack" to="UI/MenuInterface/MenuOptions" method="_on_button_back_pressed"]
[connection signal="pressed" from="UI/MenuInterface/MenuPause/MarginContainer/VBoxContainer/ButtonResume" to="UI/MenuInterface/MenuPause" method="_on_button_resume_pressed"]
[connection signal="pressed" from="UI/MenuInterface/MenuPause/MarginContainer/VBoxContainer/ButtonQuit" to="UI/MenuInterface/MenuPause" method="_on_button_quit_pressed"]
